<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_hint_text">Enter character name</string>
    <string name="users_screen_title">Users</string>
    <string name="swah_pee_logo_cd">DroidArch logo</string>
    <string name="search_icon_cd">Search icon</string>
    <string name="search_character_hint">Users will appear here soon</string>
    <string name="height">%scm</string>
    <string name="title_planet">Planet</string>
    <string name="title_species">Specie</string>
    <string name="title_films">Films</string>
    <string name="title_character_details">Character info</string>
    <string name="loading_indicator_text">Loading…</string>
    <string name="character_height">%1$scm\n%2$sinches</string>
    <string name="character_birth_year">Born on %1$s</string>
    <string name="height_label">Height</string>
    <string name="retry_btn_text">Retry</string>
    <string name="error_img_cd">Cloud image</string>
    <string name="language_label">Language: %s</string>
    <string name="population_label">Population: %s</string>
    <string name="name_label">%1$s %2$s %3$s</string>
    <string name="retry">Retry</string>
    <string name="title_location">Location</string>
    <string name="title_user_details">User info</string>
    <string name="title_contact">Contact</string>
    <string name="title_email">Email</string>
    <string name="user_dob">Born on %1$s</string>
    <string name="user_address">%1$s, %2$s, %3$s</string>
    <string name="user_region">%1$s, GMT%2$s timezone</string>
</resources>
